Aress7/src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Actual_Duration_Hours__c</fullName>
        <description>&quot;Actual Duration (Hours)&quot; which is formula field that converts minutes to hours from the &quot;Actual Duration (Minutes)&quot; field</description>
        <formula>ActualDuration  / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End__c</fullName>
        <description>when SA status changes to Complete or to Incomplete, then record the current date/time to the &quot;Actual End&quot; field</description>
        <label>Actual End (c)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <description>when SA status changes to &quot;Active&quot;, then record the current date/time to the &quot;Actual Start&quot; field</description>
        <label>Actual Start (c)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Window_End_Time__c</fullName>
        <formula>TEXT(HOUR(TimeValue((ArrivalWindowEndTime)))
+((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY()))
)+ &apos;:&apos;+ 
 IF(LEN(TEXT( MINUTE(TimeValue((ArrivalWindowEndTime)))))=1, &apos;00&apos;, TEXT( MINUTE(TimeValue((ArrivalWindowEndTime)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Window End (Time)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Window_Start_Time__c</fullName>
        <formula>TEXT(HOUR(TimeValue((ArrivalWindowStartTime))) 
+((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())) 
)+ &apos;:&apos;+ 
IF(LEN(TEXT( MINUTE(TimeValue((ArrivalWindowStartTime)))))=1, &apos;00&apos;, TEXT( MINUTE(TimeValue((ArrivalWindowStartTime)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Window Start (Time)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>(Case__r.Owner:User.FirstName)+&quot; &quot;+(Case__r.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_in_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_WO_Phone__c</fullName>
        <formula>Contact.FirstName+&quot; &quot;+Contact.LastName+&quot; &quot;+Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact, WO, Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateWhenSABecomeSchedule__c</fullName>
        <label>SA Became Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason_Other__c</fullName>
        <label>Incomplete Reason (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason__c</fullName>
        <label>Incomplete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Works Required</fullName>
                </value>
                <value>
                    <fullName>Could Not Locate Unit</fullName>
                </value>
                <value>
                    <fullName>Customer Not Present</fullName>
                </value>
                <value>
                    <fullName>Insufficient Parts/Tools</fullName>
                </value>
                <value>
                    <fullName>Not Enough Time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unable to Attend Site</fullName>
                </value>
                <value>
                    <fullName>Adverse Weather</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Could Not Access Upstream Supply</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Could Not Diagnose</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Engineer Sickness</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Insufficient Materials</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Insufficient Supply</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Insufficient Tools</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Outlander Issue</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unsafe Working Environment</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installer_Id_c__c</fullName>
        <label>Installer Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNotReviewed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNotReviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeopardy_1__c</fullName>
        <formula>IF(AND(SchedEndTime&lt;now(),  OR( ISPICKVAL(Status, &quot;Confirmed&quot;) ,ISPICKVAL(Status, &quot;Active&quot;)))  ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jeopardy - Still Confirmed or Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_SA_True__c</fullName>
        <formula>if( Main_SA__c =TRUE, &quot;Main SA&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main SA True</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked if the service appointment is Main Service Appointment</description>
        <label>Main SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_SLR__c</fullName>
        <formula>ISBLANK( FSL__InternalSLRGeolocation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing SLR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mulitday__c</fullName>
        <formula>if( day(datevalue(SchedEndTime))-day( datevalue(SchedStartTime ))&gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mulitday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfAssingedCrewMembers__c</fullName>
        <label>NumberOfAssingedCrewMembers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Case__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type_Name__c</fullName>
        <description>This field shows the record type of parent workorder</description>
        <label>Parent Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Summary__c</fullName>
        <label>Products Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>text( Case__r.Project_Manager__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Additional Works Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Enough Supply</fullName>
                </value>
                <value>
                    <fullName>Car Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Timesheet__c</fullName>
        <formula>if( Timesheet_Hours_New__c &gt; ( Duration *2),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Comment_Completed_Survey__c</fullName>
        <defaultValue>&quot;Survey Completed!&quot;</defaultValue>
        <label>SA Comment: Completed Survey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Comment_Maintenance_Return_Visit__c</fullName>
        <defaultValue>&quot;Maintenance Return Visit Required!&quot;</defaultValue>
        <label>SA Comment: Maintenance Return Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Number_Incomplete_Reason__c</fullName>
        <formula>&apos;Incomplete&apos; + &apos; &apos;+ AppointmentNumber + &apos;: &apos; + TEXT(Incomplete_Reason__c) + &apos; - &apos; + Incomplete_Reason_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Number &amp; Incomplete Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Long__c</fullName>
        <formula>IF(ISBLANK(Scheduled_Start_Date__c),NULL,IF(AND(DAY(Scheduled_Start_Date__c) &gt; 10, DAY(Scheduled_Start_Date__c) &lt; 14),&quot;th&quot;,IF(MOD(DAY(Scheduled_Start_Date__c),10) = 1,&quot;st&quot;,IF(MOD(DAY(Scheduled_Start_Date__c),10) = 2,&quot;nd&quot;,IF(MOD(DAY(Scheduled_Start_Date__c),10) = 3,&quot;rd&quot;,&quot;th&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Date Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Time_Minute__c</fullName>
        <formula>MINUTE(TIMEVALUE( SchedEndTime))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled End(Time Minute)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Time__c</fullName>
        <formula>HOUR(TIMEVALUE( SchedEndTime))+((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled End(Time)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_DateTime__c</fullName>
        <formula>DATETIMEVALUE(DATEVALUE(SchedStartTime))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start(DateTime)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <formula>SchedStartTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time_Minute__c</fullName>
        <formula>MINUTE(TIMEVALUE( SchedStartTime))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start(Time Minute)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time__c</fullName>
        <formula>HOUR(TIMEVALUE( SchedStartTime))+((DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY()))</formula>
        <label>Scheduled Start(Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Report_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Report Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Report_Created_Date__c</fullName>
        <label>Service Report Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Description__c</fullName>
        <label>Survey Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technician_Email__c</fullName>
        <label>Technician Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_Hours_New__c</fullName>
        <formula>min(10,(IF( or(Work_Type__c  = &apos;RM Duties&apos;,Work_Type__c  = &apos;Training&apos;,Work_Type__c  = &apos;Vehicle Maintenance&apos;,Work_Type__c  = &apos;Stock Check, Management &amp; Expenses&apos;), Duration , Actual_Duration_Hours__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Hours__c</fullName>
        <description>Timesheet hours used to reflect Completed Service Appointment planned hours and Incomplete Service Appointment hours</description>
        <label>Timesheet Hours Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheet Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UncheckByUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UncheckByUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkTypeStartOffsetTime__c</fullName>
        <label>WorkTypeStartOffsetTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>CreatedBy</columns>
        <columns>Work_Type__c</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <filters>
            <field>Work_Type__c</field>
            <operation>contains</operation>
            <value>Domestic</value>
        </filters>
        <label>Unassigned</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
            <group>Commercial_Sales_Team</group>
            <group>FIELD_SERVICE_Default</group>
            <group>HC_Docs_Team</group>
            <group>HC_Ops_Team</group>
            <group>HC_Sales_Team</group>
            <group>Norway_Team</group>
            <group>OLEV_Team</group>
            <group>PaymentRequest_Users</group>
            <group>Supply_Chain_Team</group>
            <group>Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complete_Incomplete</fullName>
        <columns>Contact_WO_Phone__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status</columns>
        <filterScope>AssignedToMe</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Completed,Incomplete</value>
        </filters>
        <label>Complete/Incomplete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DK_Jobs_to_Resolve</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>Account</columns>
        <columns>Contact</columns>
        <columns>SchedStartTime</columns>
        <columns>Status</columns>
        <columns>Technician__c</columns>
        <columns>Work_Type__c</columns>
        <columns>ActualEndTime</columns>
        <columns>ActualStartTime</columns>
        <columns>EstDuration</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jeopardy_1__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>notContain</operation>
            <value>Amy</value>
        </filters>
        <filters>
            <field>Contact</field>
            <operation>notContain</operation>
            <value>kaplansky</value>
        </filters>
        <filters>
            <field>Work_Type__c</field>
            <operation>contains</operation>
            <value>install (domestic)</value>
        </filters>
        <label>Jobs to Resolve (HC)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Commercial_Install_Team</group>
            <group>HC_Ops_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>